<resources>
    <string name="app_name">Nitin Kumar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_intro">Skip intro</string>
    <string name="about_us">About Us</string>
    <string name="todo">TODO</string>
    <string name="welcome_nitin">Welcome Nitin</string>
    <string name="feed">Feed</string>
    <string name="upload_button">Upload Image</string>
    <string name="select_image">Select Image</string>
    <string name="hello">Hello,</string>
    <string name="nitin">Nitin</string>
    <string name="explore">Explore</string>
</resources>