<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">


    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcomeText"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="118dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_nitin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeImage"
        android:textAlignment="center"
        android:textSize="32sp"
        android:paddingTop="34dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/feedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:fontFamily="@font/poppins_bold"
        android:background="@drawable/button_gradient"
        android:padding="20dp"
        android:text="@string/feed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/poppins_bold"
        android:padding="20dp"
        android:text="@string/upload_button"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedButton" />



</androidx.constraintlayout.widget.ConstraintLayout>