<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FeedFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gradientLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_ground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="#F9F9FB"
            android:textSize="20sp"
            android:fontFamily="@font/noto_sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginTop="14dp"/>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/nitin"
            android:textColor="#F9F9FB"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helloText" />


        <com.google.android.material.search.SearchBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/serach_background"
            app:navigationIcon="@drawable/search"
            android:text="@string/explore"
            android:textAppearance="@style/searchText"
            app:layout_constraintTop_toBottomOf="@id/nameText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="43dp"
            android:layout_marginTop="31dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>
        
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:srcCompat="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:scaleType="centerCrop"
            app:shapeAppearance="@style/userPhotoCircle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gradientLayout"
        android:layout_marginStart="25dp"
        android:layout_marginTop="22dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Browse By"
            android:textSize="20sp"
            android:fontFamily="@font/noto_sans_bold"
            android:layout_marginBottom="13dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/latestCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#D9D9D9"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/noto_sans"
                    android:text="Latest"
                    android:textSize="11sp"
                    android:paddingStart="33dp"
                    android:paddingEnd="33dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/olderCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:backgroundTint="#D9D9D9"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/latestCard"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/noto_sans"
                    android:text="Older"
                    android:textSize="11sp"
                    android:paddingStart="33dp"
                    android:paddingEnd="33dp"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshSwipe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/image_list_item"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>





</androidx.constraintlayout.widget.ConstraintLayout>